objects/CollectionVehicle__c.object
<CustomObject>
    <fields>
        <fullName>ActivityStatus__c</fullName>
        <label>ActivityStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVN__c</fullName>
        <label>DVN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Route Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plate__c</fullName>
        <label>Plate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Burr Ridge</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                </value>
                <value>
                    <fullName>Watseka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CollectionVehicle</label>
    <nameField>
        <displayFormat>CV-{00000}</displayFormat>
        <label>CollectionVehicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CollectionVehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>